force-app/main/default/objects/Shelf_Stock_Items__c/Shelf_Stock_Items__c.object-meta.xml
<CustomObject>
    <label>Shelf Stock Items</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Shelf Stock Items</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shelf Stock Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>