force-app/main/default/objects/Shelf_Stock_Items__c/fields/Compition_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Compition_Remarks__c</fullName>
    <label>competition Remarks</label>
    <type>TextArea</type>
</CustomField>