force-app/main/default/objects/Shelf_Stock_Items__c/fields/Shelf_Stock__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shelf Stock</label>
    <referenceTo>Shelf_Stock__c</referenceTo>
    <relationshipLabel>Shelf Stock Items</relationshipLabel>
    <relationshipName>Shelf_Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>