force-app/main/default/objects/Shelf_Stock_Items__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Shelf Stock Items</relationshipLabel>
    <relationshipName>Shelf_Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>